--- a/khan-exercises/exercises/equation_of_a_circle_1.html
+++ b/khan-exercises/exercises/equation_of_a_circle_1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math math-format expressions">
+<html data-require="math math-format expressions">
 <head>
     <meta charset="UTF-8" />
-    <title>Equation of a circle 1</title>
+    <title>Vergelijking van een cirkel 1</title>
     <script src="../khan-exercise.js"></script>
     <style type="text/css">
         #answer_area .short input[type=text] {
@@ -24,9 +24,9 @@
     <div class="problems">
         <div>
             <div class="question">
-                <p data-tt="question1" >The equation of a circle <code>C</code> is <code><var>expr(["+", X2T, Y2T])</var> = <var>R * R</var></code>.</p>
+                <p data-tt="question1" >De vergelijking van een cirkel <code>C</code> is <code><var>expr(["+", X2T, Y2T])</var> = <var>R * R</var></code>.</p>
 
-                <p data-tt="question2" >What are its center <code>(h, k)</code> and its radius <code>r</code>?</p>
+                <p data-tt="question2" >Wat is het middelpunt <code>(h, k)</code> en hoe groot is de straal <code>r</code>?</p>
 
             </div>
 
@@ -38,9 +38,9 @@
     </div>
 
     <div class="hints">
-        <p data-tt="hint1">The equation of a circle with center <code>(h, k)</code> and radius <code>r</code> is <code>(x - h)^2 + (y - k)^2 = r^2</code>.</p>
-        <p data-tt="hint2">We can rewrite the given equation as <code>(x - <var>negParens(H)</var>)^2 + (y - <var>negParens(K)</var>)^2 = <var>R</var>^2</code>.</p>
-        <p data-tt="hint3">Thus, <code>(h, k) = (<var>H</var>, <var>K</var>)</code> and <code>r = <var>R</var></code>.</p>
+        <p data-tt="hint1">De vergelijking voor een cirkel met middelpunt <code>(h, k)</code> en straal <code>r</code> is <code>(x - h)^2 + (y - k)^2 = r^2</code>.</p>
+        <p data-tt="hint2">We kunnen de gegeven vergelijking herschrijven tot <code>(x - <var>negParens(H)</var>)^2 + (y - <var>negParens(K)</var>)^2 = <var>R</var>^2</code>.</p>
+        <p data-tt="hint3">Dus zijn het middelpunt, <code>(h, k) = (<var>H</var>, <var>K</var>)</code> en de straal <code>r = <var>R</var></code>.</p>
     </div>
     </div>
 </body>
