--- a/khan-exercises/exercises/recognizing_conic_sections.html
+++ b/khan-exercises/exercises/recognizing_conic_sections.html
@@ -37,7 +37,7 @@
                         </div>
                     </div>
 
-                    <div class="solution" data-tt="question6">Parabola</div>
+                    <div class="solution" data-tt="question6">Parabool</div>
                     <ul class="choices" data-category="true">
                         <li data-tt="question2">Parabool</li>
                         <li data-tt="question3">Hyperbool</li>
