--- a/khan-exercises/exercises/parabola_intuition_2.html
+++ b/khan-exercises/exercises/parabola_intuition_2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math graphie graphie-helpers">
+<html data-require="math graphie graphie-helpers">
 <head>
     <meta charset="UTF-8" />
-    <title>Parabola intuition 2</title>
+    <title>Gevoel voor parabolen 2</title>
     <script src="../khan-exercise.js"></script>
     <style>
         .parabola-answer {
@@ -33,8 +33,8 @@
 
         <div class="problems">
             <div>
-                <p class="question" data-tt="question1">Adjust the focus coordinates and the equation of the directrix to make the blue parabola match the orange parabola.</p>
-                <p data-tt="question2">All points on the blue parabola are equidistant from the focus and the directrix. How does changing the numbers affect the shape of the parabola?</p>
+                <p class="question" data-tt="question1">Verplaats de coördinaten van het brandpunt en de vergelijking van de poollijn, zodat de blauwe parabool over de oranje parabool valt.</p>
+                <p data-tt="question2">Elk punt van de parabool heeft gelijke afstanden tot het brandpunt en de poollijn. Hoe zal het veranderen van het getal invloed hebben op de vorm van de parabool?</p>
 
                 <div class="graphie" id="grid">
                     graphInit({
@@ -67,15 +67,15 @@
                 </div>
             
                 <div class="solution" data-type="multiple">
-                    <p class="parabola-answer" data-tt="question3">focus x coordinate: <span id="focus-x-label"><code>0</code></span><span class="mini-buttons">
+                    <p class="parabola-answer" data-tt="question3">Verplaats x coördinaat: <span id="focus-x-label"><code>0</code></span><span class="mini-buttons">
                         <input type="button" class="simple-button action-gradient" value="+" onclick="updateFocusDirectrix( 1, 0, 0 )" />
                         <input type="button" class="simple-button action-gradient" value="-" onclick="updateFocusDirectrix( -1, 0, 0 )" /></span></p>
 
-                    <p class="parabola-answer" data-tt="question4">focus y coordinate: <span id="focus-y-label"><code>0.25</code></span><span class="mini-buttons">
+                    <p class="parabola-answer" data-tt="question4">Verplaats y coördinaat: <span id="focus-y-label"><code>0.25</code></span><span class="mini-buttons">
                         <input type="button" class="simple-button action-gradient" value="+" onclick="updateFocusDirectrix( 0, 1/8, 0 )" />
                         <input type="button" class="simple-button action-gradient" value="-" onclick="updateFocusDirectrix( 0, -1/8, 0 )" /></span></p>
 
-                    <p class="parabola-answer" data-tt="question5">directrix: <span id="directrix-label"><code>y=-0.25</code></span><span class="mini-buttons">
+                    <p class="parabola-answer" data-tt="question5">poollijn: <span id="directrix-label"><code>y=-0.25</code></span><span class="mini-buttons">
                         <input type="button" class="simple-button action-gradient" value="+" onclick="updateFocusDirectrix( 0, 0, 1/8 )" />
                         <input type="button" class="simple-button action-gradient" value="-" onclick="updateFocusDirectrix( 0, 0, -1/8 )" /></span></p>
 
