--- a/khan-exercises/exercises/rounding_whole_numbers.html
+++ b/khan-exercises/exercises/rounding_whole_numbers.html
@@ -18,7 +18,7 @@
                 <var id="ROUNDED">Math.round(roundTo( PLACE, NUM ))</var>
             </div>
 
-            <p class="question" data-tt="question">Round <code><var>commafy( NUM )</var></code> to the nearest <var>TPLACE</var>.</p>
+            <p class="question" data-tt="question">Rond <code><var>commafy( NUM )</var></code> naar het dichtstbijzijnde gehele getal <var>TPLACE</var>.</p>
             <div class="solution" data-forms="integer"><var>ROUNDED</var></div>
         </div>
         <div id="look-at-five" data-weight="1">
@@ -35,17 +35,17 @@
                 <var id="TPLACE">placesLeftOfDecimal[ -PLACE ]</var>
                 <var id="ROUNDED">roundTo( PLACE, NUM )</var>
             </div>
-            <p data-tt="question" class="question">Round <code><var>commafy( NUM )</var></code> to the nearest <var>TPLACE</var>.</p>
+            <p data-tt="question" class="question">Rond <code><var>commafy( NUM )</var></code> naar het dichtstbijzijnde gehele getal <var>TPLACE</var>.</p>
             <div class="solution" data-forms="integer"><var>ROUNDED</var></div>
         </div>
     </div>
 
     <div class="hints">
-        <p data-tt="hint1">There are two ways to think about this problem.</p>
-        <p data-tt="hint2">1st way: Look at the <var>placesLeftOfDecimal[ -1 - PLACE ]</var>s digit <code><var>DIGITS[ 5 + PLACE ]</var></code> to see whether to round up or down.</p>
-        <p data-tt="hint3" data-if="DIGITS[ 5 + PLACE ] >= 5" data-tt="hint3">Because it is <span data-if="DIGITS[ 5 + PLACE ] > 5">more than</span><span data-else>equal to</span> <code>5</code>, we round up, giving <code><var>commafy( ROUNDED )</var></code>.</p>
-        <p data-else data-tt="hint4">Because it is less than <code>5</code>, we round down, giving <code><var>commafy( ROUNDED )</var></code>.</p>
-        <p data-tt="hint5">2nd way:  Consider which end of the number line is closer to <var>NUM</var> - this end is circled in blue.</p>
+        <p data-tt="hint1">Er zijn twee manieren op dit probleem op te lossen.</p>
+        <p data-tt="hint2">Eerste manier: Kijk naar het <var>placesLeftOfDecimal[ -1 - PLACE ]</var> cijfer achter de komma  <code><var>DIGITS[ 5 + PLACE ]</var></code> om te zien of we het gehele getal naar boven of naar beneden moeten afronden.</p>
+        <p data-tt="hint3" data-if="DIGITS[ 5 + PLACE ] >= 5" data-tt="hint3">Omdat het getal achter de komma <span data-if="DIGITS[ 5 + PLACE ] > 5">of hoger</span><span data-else>gelijk aan</span> <code>5</code> is, ronden we af naar boven, het antwoord wordt <code><var>commafy( ROUNDED )</var></code>.</p>
+        <p data-else data-tt="hint4">Omdat het getal achter de komma kleiner is dan <code>5</code>, ronden we af naar beneden, ronden we af naar boven, het antwoord wordt <code><var>commafy( ROUNDED )</var></code>.</p>
+        <p data-tt="hint5">Tweede manier: bedenk welk gedeelte van de getallenlijn het dichtstbij <var>NUM</var> ligt, dit gedeelde is blauw omcirkeld..</p>
         <div class="graphie">
             init({
                 range: [ [ -0.06 * pow( 10, -PLACE ) , 1.3 * pow( 10, -PLACE ) ], [-1, 1] ],
@@ -66,3 +66,4 @@
 </div>
 </body>
 </html>
+
