--- a/khan-exercises/exercises/same_side_interior_angles_2.html
+++ b/khan-exercises/exercises/same_side_interior_angles_2.html
@@ -52,7 +52,7 @@
 			</div>
 		</div>
 		<div>
-			<p>Een van de roze hoeken  <code>\color{<var>GREEN</var>}{/text{komt overeen}}</code> met de oranje hoek en de andere roze hoek vormt een <code>\color{<var>GREEN</var>}{\text{wisselende binnenhoek}}</code>. Daarom is de oranje hoek gelijk aan de roze hoek.</p>
+			<p>Een van de roze hoeken  <code>\color{<var>GREEN</var>}{\text{komt overeen}}</code> met de oranje hoek en de andere roze hoek vormt een <code>\color{<var>GREEN</var>}{\text{wisselende binnenhoek}}</code>. Daarom is de oranje hoek gelijk aan de roze hoek.</p>
 			<p><code>\color{<var>PINK</var>}{y} = \color{<var>ORANGE</var>}{<var>C</var>x + <var>D</var>}</code></p>
 		</div>
 		<div>
@@ -73,7 +73,7 @@
 		<p><code>\dfrac{<var>A + C</var>x}{\color{<var>PINK</var>}{<var>A + C</var>}} = \dfrac{<var>180 - B - D</var>}{\color{<var>PINK</var>}{<var>A + C</var>}}</code></p>
 		</div>
 		<div>
-		<p>Simplify.</p>
+		<p>Vereenvoudig.</p>
 		<p><code>x = <var>(180 - B - D) / (A + C)</var></code></p>
 		<p>Merk op dat de blauwe en oranje hoeken elkaars <code>\color{<var>GREEN</var>}{supplement}</code> zijn.</p>
 		</div>
