--- a/khan-exercises/exercises/same_side_exterior_angles_2.html
+++ b/khan-exercises/exercises/same_side_exterior_angles_2.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div>
-            <p>Een van de roze hoeken <code>\color{<var>GREEN</var>}{komt overeen}</code> met de oranje hoek, en de andere roze hoek vormt een <code>\color{<var>GREEN</var>}{\text{wisselende binnenhoek}}</code>. Daarom is de oranje hoek gelijk aan de roze hoek.</p>
+            <p>Een van de roze hoeken <code>\color{<var>GREEN</var>}{\text{komt overeen}}</code> met de oranje hoek, en de andere roze hoek vormt een <code>\color{<var>GREEN</var>}{\text{wisselende binnenhoek}}</code>. Daarom is de oranje hoek gelijk aan de roze hoek.</p>
             <p><code>\color{<var>PINK</var>}{y} = \color{<var>ORANGE</var>}{<var>C</var>x + <var>D</var>}</code></p>
         </div>
         <div>
