--- a/khan-exercises/exercises/interpreting_linear_equations.html
+++ b/khan-exercises/exercises/interpreting_linear_equations.html
@@ -76,7 +76,7 @@
                             style({ stroke: "#40a020" });
                             line( [ 7, 4 * M + B ], [ 7, 7 * M + B ] );
                         </div>
-                        <p data-tt="hint1" >Als we naar de grafiek kijken, zien we dat als <code>x</code> toeneemt, (<code>\color{#000000}{\text{black arrow}}</code>), <code>y</code> ook toeneemt. (<code>\color{#40a020}{\text{groene pijl}}</code>).</p>
+                        <p data-tt="hint1" >Als we naar de grafiek kijken, zien we dat als <code>x</code> toeneemt, (<code>\color{#000000}{\text{zwarte pijl}}</code>), <code>y</code> ook toeneemt. (<code>\color{#40a020}{\text{groene pijl}}</code>).</p>
                     </div>
                     <p data-tt="hint2" >We kunnen concluderen dat de richtingscoëfficient positief is, of dat de variabelen positief aan elkaar gecorreleerd zijn.</p>
                     <p data-tt="hint3" >Dus, als <var>X_AXIS_QUESTION</var> toeneemt, neemt <var>Y_AXIS_QUESTION</var> ook <b>toe</b>.</p>
@@ -96,17 +96,17 @@
                             style({ stroke: "#ff0000" });
                             line( [ 7, 4 * M + B ], [ 7, 7 * M + B ] );
                         </div>
-<<<<<<< HEAD
+
                         <p data-tt="hint4" >Wanneer we naar de grafiek kijken, zie we dat wanneer <code>x</code> toeneemt (<code>\color{#000000}{\text{zwarte pijl}}</code>), <code>y</code> afneemt (<code>\color{#ff0000}{\text{rode pijl}}</code>).</p>
                     </div>
                     <p data-tt="hint5" >We kunnen concluderen dat de richtingscoëfficient negatief is, of dat de variabelen negatief aan elkaar gecorreleerd zijn.</p>
                     <p data-tt="hint6" >Dus, als <var>X_AXIS_QUESTION</var> toeneemt, <b>daalt </b><var>Y_AXIS_QUESTION</var> .</p>
-=======
+
                         <p data-tt="hint4" >Wanneer we naar de grafiek kijken, zie we dat <code>x</code> toeneemt (<code>\color{#000000}{\text{zwarte pijl}}</code>), <code>y</code> afneemt (<code>\color{#ff0000}{\text{rode pijl}}</code>).</p>
                     </div>
                     <p data-tt="hint5" >We kunnen concluderen dat de richtingscoëfficient negatief is, of dat de variabelen negatief aan elkaar gecorreleerd zijn.</p>
                     <p data-tt="hint6" >Dus, als <var>X_AXIS_QUESTION</var> toeneemt, <b>daalt</b><var>Y_AXIS_QUESTION</var> .</p>
->>>>>>> a45030ca6589deb7d391d6458b2bb8ccff9b46cd
+
                 </div>
             </div>
             <div id="stays" data-type="increase" data-weight="1">
