--- a/khan-exercises/exercises/linear_equations_1.html
+++ b/khan-exercises/exercises/linear_equations_1.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format">
 <head>
     <meta charset="UTF-8" />
-    <title>Linear equations 1</title>
+    <title>Lineaire vergelijkingen 1</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -24,7 +24,7 @@
 
         <div class="problems">
             <div>
-                <p data-tt="question1" class="question">Solve for <code>x</code>:</p>
+                <p data-tt="question1" class="question">Los <code>x</code> op:</p>
                 <div><code><var>A</var>x = <var>D</var></code></div>
 
                 <p class="solution"><var>D / A</var></p>
@@ -33,14 +33,15 @@
 
         <div class="hints">
             <div>
-                <p data-tt="hint1" >Multiply both sides by <code><var>ONE_OVER_A</var></code>.</p>
+                <p data-tt="hint1" >Vermenigvuldig beide kanten door <code><var>ONE_OVER_A</var></code>.</p>
                 <p><code>(<var>ONE_OVER_A</var>) \cdot (<var>A</var>x) = (<var>ONE_OVER_A</var>) \cdot (<var>D</var>)</code></p>
             </div>
             <div>
-                <p data-tt="hint2">Simplify.</p>
+                <p data-tt="hint2">Vereenvoudig.</p>
                 <p><code>x = <var>SOLUTION</var></code></p>
             </div>
         </div>
     </div>
 </body>
 </html>
+
