--- a/khan-exercises/exercises/linear_equations_4.html
+++ b/khan-exercises/exercises/linear_equations_4.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format">
 <head>
     <meta charset="UTF-8" />
-    <title>Linear equations 4</title>
+    <title>Lineaire vergelijkingen 4</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -17,24 +17,24 @@
                     <var id="D">randRangeNonZero( -6, 6 )</var>
                     <var id="ANSWER">( B - A * D ) / ( A * C )</var>
                 </div>
-                <p data-tt="question1" class="question">Solve for <code>x</code>:</p>
+                <p data-tt="question1" class="question">Los <code>x</code> op:</p>
                 <div><code><var>A</var> = \dfrac{<var>B</var>}{<var>expr(["*", C, "x"])</var> + <var>D</var>}</code></div>
 
                 <p class="solution"><var>ANSWER</var></p>
 
                 <div class="hints">
                     <div>
-                        <p data-tt="hint1" >Multiply both sides by <code><var>expr(["*", C, "x"])</var> + <var>D</var></code>:</p>
+                        <p data-tt="hint1" >Vermenigvuldig beide kanten met <code><var>expr(["*", C, "x"])</var> + <var>D</var></code>:</p>
                         <p><code>\qquad <var>A</var> (<var>expr(["*", C, "x"])</var> + <var>D</var>) = \dfrac{<var>B</var>}{<var>expr(["*", C, "x"])</var> + <var>D</var>} (<var>expr(["*", C, "x"])</var> + <var>D</var>)</code></p>
                         <p><code>\qquad <var>A * C</var>x + <var>A * D</var> = <var>B</var></code></p>
                     </div>
                     <div>
-                        <p data-tt="hint2" >Now <var>A * D < 0 ? "add" : "subtract"</var> <code><var>abs( A * D )</var></code> <var>A * D < 0 ? "to" : "from"</var> both sides:</p>
+                        <p data-tt="hint2" > <var>A * D < 0 ? "Tel nu" : "Trek nu af"</var> <code><var>abs( A * D )</var></code> <var>A * D < 0 ? "op bij" : "af van"</var> beide kanten:</p>
                         <p><code>\qquad (<var>A * C</var>x + <var>A * D</var>) + <var>-A * D</var> = <var>B</var> + <var>- A * D</var></code></p>
                         <p><code>\qquad <var>A * C</var>x = <var>B - A * D</var></code></p>
                     </div>
                     <div>
-                        <p data-tt="hint3" >Divide by <code><var>A * C</var></code>:</p>
+                        <p data-tt="hint3" >Deel door <code><var>A * C</var></code>:</p>
                         <p><code>\qquad x = <var>fractionReduce( B - A * D, A * C )</var></code></p>
                     </div>
                 </div>
@@ -49,29 +49,29 @@
                     <var id="E">randRange( 2, 8 )</var>
                     <var id="ANSWER">( E * D - B ) / ( A - E * C )</var>
                 </div>
-                <p data-tt="question2" class="question">Solve for <code>x</code>:</p>
+                <p data-tt="question2" class="question">Los <code>x</code> op:</p>
                 <div><code>\dfrac{<var>expr(["*", A, "x"])</var> + <var>B</var>}{<var>expr(["*", C, "x"])</var> + <var>D</var>} = <var>E</var></code></div>
 
                 <p class="solution"><var>ANSWER</var></p>
 
                 <div class="hints">
                     <div>
-                        <p data-tt="hint4" >Multiply both sides by <code><var>expr(["*", C, "x"])</var> + <var>D</var></code>:</p>
+                        <p data-tt="hint4" >Vermenigvuldig beide kanten met <code><var>expr(["*", C, "x"])</var> + <var>D</var></code>:</p>
                         <p><code>\qquad \dfrac{<var>expr(["*", A, "x"])</var> + <var>B</var>}{<var>expr(["*", C, "x"])</var> + <var>D</var>} (<var>expr(["*", C, "x"])</var> + <var>D</var>) = <var>E</var> (<var>expr(["*", C, "x"])</var> + <var>D</var>)</code></p>
                         <p><code>\qquad <var>expr(["*", A, "x"])</var> + <var>B</var> = <var>expr(["*", E * C, "x"])</var> + <var>E * D</var></code></p>
                     </div>
                     <div>
-                        <p data-tt="hint5" >Now <var>E * C < 0 ? "add" : "subtract"</var> <code><var>abs( E * C )</var>x</code> <var>E * C < 0 ? "to" : "from"</var> both sides:</p>
+                        <p data-tt="hint5" > <var>E * C < 0 ? "Tel nu" : "Trek nu"</var> <code><var>abs( E * C )</var>x</code> <var>E * C < 0 ? "op bij" : "af van"</var> beide kanten:</p>
                         <p><code>\qquad (<var>expr(["*", A, "x"])</var> + <var>B</var>) + <var>-E * C</var>x = (<var>expr(["*", E * C, "x"])</var> + <var>E * D</var>) + <var>-E * C</var>x</code></p>
                         <p><code>\qquad <var>A - E * C</var>x + <var>B</var> = <var>E * D</var></code></p>
                     </div>
                     <div>
-                        <p data-tt="hint6" >Now <var>B < 0 ? "add" : "subtract"</var> <code><var>abs( B )</var></code>:</p>
+                        <p data-tt="hint6" > <var>B < 0 ? "Tel nu" : "Trek nu"</var> <code><var>abs( B )</var></code> <var>B < 0 ? "op bij" : "af van"</var>:</p> 
                         <p><code>\qquad (<var>A - E * C</var>x + <var>B</var>) + <var>-B</var> = <var>E * D</var> + <var>-B</var></code></p>
                         <p><code>\qquad <var>A - E * C</var>x = <var>E * D - B</var></code></p>
                     </div>
                     <div>
-                        <p data-tt="hint7" >Divide by <code><var>A - E * C</var></code>:</p>
+                        <p data-tt="hint7" >Deel door <code><var>A - E * C</var></code>:</p>
                         <p><code>\qquad x = <var>fractionReduce( E * D - B, A - E * C )</var></code></p>
                     </div>
                 </div>
