--- a/khan-exercises/exercises/solving_for_a_variable.html
+++ b/khan-exercises/exercises/solving_for_a_variable.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format">
 <head>
     <meta charset="UTF-8" />
-    <title>Solving for a variable</title>
+    <title>Een variabele vrijmaken</title>
     <script src="../khan-exercise.js"></script>
     <script type="text/javascript">
         function color_( str, blue ) {
