--- a/khan-exercises/exercises/one_step_inequalities.html
+++ b/khan-exercises/exercises/one_step_inequalities.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format graphie graphie-helpers">
 <head>
     <meta charset="UTF-8" />
-    <title>One-step inequalities</title>
+    <title>Eenstaps ongelijkheden</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
