--- a/khan-exercises/exercises/inequalities_on_a_number_line.html
+++ b/khan-exercises/exercises/inequalities_on_a_number_line.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format graphie graphie-helpers">
 <head>
     <meta charset="UTF-8" />
-    <title>Inequalities on a number line</title>
+    <title>Ongelijkheden op een getallenlijn</title>
     <script src="../khan-exercise.js"></script>
     <script>
         function numberLineWithArrow( start, end, step, x, y, arrowStartX, arrowEndX, inclusive ) {
