--- a/khan-exercises/exercises/point_slope_form.html
+++ b/khan-exercises/exercises/point_slope_form.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format expressions graphie">
 <head>
     <meta charset="UTF-8" />
-    <title>Point slope form</title>
+    <title>Punt-helling formule</title>
     <script src="../khan-exercise.js"></script>
     <style type="text/css">
     #answer_area input[type=text] {
