--- a/khan-exercises/exercises/plugging_in_values.html
+++ b/khan-exercises/exercises/plugging_in_values.html
@@ -2,7 +2,7 @@
 <html  data-translatable data-require="math">
 <head>
     <meta charset="UTF-8" />
-    <title>Plugging in X and Y Values</title>
+    <title>X en Y waarden invullen</title>
     <script src="../khan-exercise.js"></script>
     <style type="text/css">
         .plug_in span {
