--- a/khan-exercises/exercises/linear_inequalities.html
+++ b/khan-exercises/exercises/linear_inequalities.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format">
 <head>
     <meta charset="UTF-8" />
-    <title>Linear inequalities</title>
+    <title>Lineaire ongelijkheden</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
