Fix solution translation

--- a/khan-exercises/exercises/ordering_negative_numbers.html
+++ b/khan-exercises/exercises/ordering_negative_numbers.html
@@ -75,7 +75,7 @@
 
                 <div class="solution" data-type="custom">
                     <div data-tt"solution1" class="instruction">
-                        Drag the numbers left and right so they are in order from least to greatest
+                        Sleep de nummers naar links en naar rechts zodat ze op volgorde staan van klein naar groot
                     </div>
                     <div class="guess">SORTER.getContent()</div>
                     <div class="validator-function">
