--- a/khan-exercises/exercises/angle_addition_postulate.html
+++ b/khan-exercises/exercises/angle_addition_postulate.html
@@ -185,8 +185,8 @@
                     <p>Vereenvoudig:</p>
                     <p><code>\qquad \blue{m<var>ANSWER[0]</var> = <var>ANSWER[1]*X</var> + <var>ANSWER[2]</var>}</code>.</p>
                 </div>
-                <p class="final_answer" data-if="ANSWER[0]===ANGLE_BOT">So <code>\green{m<var>ANSWER[0]</var> = <var>ANSWER[1] * X + ANSWER[2]</var>}</code>.</p>
-                <p class="final_answer" data-else>So <code>\blue{m<var>ANSWER[0]</var> = <var>ANSWER[1] * X + ANSWER[2]</var>}</code>.</p>
+                <p class="final_answer" data-if="ANSWER[0]===ANGLE_BOT">Dus <code>\green{m<var>ANSWER[0]</var> = <var>ANSWER[1] * X + ANSWER[2]</var>}</code>.</p>
+                <p class="final_answer" data-else>Dus <code>\blue{m<var>ANSWER[0]</var> = <var>ANSWER[1] * X + ANSWER[2]</var>}</code>.</p>
             </div>
         </div>
     </div>
