--- a/khan-exercises/exercises/domain_of_a_function.html
+++ b/khan-exercises/exercises/domain_of_a_function.html
@@ -72,7 +72,7 @@
 
 			<div id="two-denom-cond" data-type="two-denom-simplify">
 
-				<p class="problem"><code>f(x)= \begin{cases} \dfrac{ x + <var>A</var> }{ ( x + <var>A</var> )( x - <var>B</var> ) } & \text{if $x \neq <var>B</var>$} \\ <var>C</var> & \text{if $x = <var>B</var>$} \end{cases}</code></p>
+				<p class="problem"><code>f(x)= \begin{cases} \dfrac{ x + <var>A</var> }{ ( x + <var>A</var> )( x - <var>B</var> ) } & \text{als$x \neq <var>B</var>$} \\ <var>C</var> & \text{als $x = <var>B</var>$} \end{cases}</code></p>
 
 				<p class="solution"><code><var>CHOICES["two-denom-cond"]</var></code></p>
 				<ul class="choices" data-show="5" data-none="true">
