--- a/khan-exercises/exercises/graphing_inequalities_2.html
+++ b/khan-exercises/exercises/graphing_inequalities_2.html
@@ -56,7 +56,7 @@
                 </p>
 
                 <form>
-                    <input type="button" value="Shade other side" onClick="javascript:
+                    <input type="button" value="Schaduw aan de andere kant" onClick="javascript:
                         KhanUtil.currentGraph.graph.shadetop = !KhanUtil.currentGraph.graph.shadetop;
                         KhanUtil.currentGraph.graph.update();
                     " />
