--- a/khan-exercises/exercises/graphing_systems_of_inequalities.html
+++ b/khan-exercises/exercises/graphing_systems_of_inequalities.html
@@ -64,7 +64,7 @@
 
                 <form>
                     <span class="hint_blue" style="width: 40px">Inequality 1:</span>
-                    <input type="button" value="Shade other side" onClick="javascript:
+                    <input type="button" value="Schaduw aan de andere kant" onClick="javascript:
                         KhanUtil.currentGraph.graph.shadetop1 = !KhanUtil.currentGraph.graph.shadetop1;
                         KhanUtil.currentGraph.graph.update();
                     " />
