--- a/khan-exercises/exercises/graphing_systems_of_inequalities.html
+++ b/khan-exercises/exercises/graphing_systems_of_inequalities.html
@@ -84,7 +84,7 @@
                     </label>
                     <br />
                     <span class="hint_green" style="width: 40px">Inequality 2:</span>
-                    <input type="button" value="Shade other side" onClick="javascript:
+                    <input type="button" value="Schaduw aan de andere kant" onClick="javascript:
                         KhanUtil.currentGraph.graph.shadetop2 = !KhanUtil.currentGraph.graph.shadetop2;
                         KhanUtil.currentGraph.graph.update();
                     " />
