--- a/khan-exercises/exercises/adding_fractions_with_common_denominators.html
+++ b/khan-exercises/exercises/adding_fractions_with_common_denominators.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format graphie graphie-helpers">
 <head>
     <meta charset="UTF-8" />
-    <title>Adding fractions with common denominators</title>
+    <title>Breuken met gelijke noemers optellen</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -33,7 +33,7 @@
                 piechart( [ N2, D - N2 ], ["#e00", "#999"], 2 );
             </div>
         </div>
-        <p data-tt="hint1">Add the numerators.</p>
+        <p data-tt="hint1">Tel de tellers bij elkaar op.</p>
         <div class="graphie">
             init({ range: [ [-3, 3], [-3, 3] ], scale: 25 });
             piechart( [ N1+N2, D - N2 - N1], ["#e00", "#999"], 2 );
@@ -42,7 +42,7 @@
             <p><code><var>fraction( N1, D )</var> + <var>fraction( N2, D )</var> = <var>fraction( N1 + N2, D )</var></code></p>
         </div>
         <div data-if="getGCD( N1 + N2, D ) !== 1">
-            <p data-tt="hint2">Simplify.</p>
+            <p data-tt="hint2">Vereenvoudig.</p>
             <div class="graphie">
                 init({ range: [ [-3, 3], [-3, 3] ], scale: 25 });
                 piechart( [ reduce( N1 + N2, D)[0], reduce( N1 + N2, D)[1] -  reduce( N1 + N2, D)[0]], ["#e00", "#999"], 2 );
