--- a/khan-exercises/exercises/telling_time_2.html
+++ b/khan-exercises/exercises/telling_time_2.html
@@ -256,9 +256,9 @@
                         <p>
                             Omdat er sprake is van <code><var>MINUTE</var></code> minuten over het uur,
                             <span data-if="MINUTE_IS_ZERO">
-                                the minute hand should be at the mark numbered
-                                <code class="hint_orange">12</code>, which is the first tick mark on the clock
-                                and represents <code>0</code> minutes past the hour
+                                de minutenwijzer moet op het streepje
+                                <code class="hint_orange">12</code> staan, wat het eerste streepje op de klok is
+                                en weergeeft dat het <code>0</code> minuten over het uur is.
                             </span><span data-else>
                                 en elk streepje voor 5 minuten staat, moet de minutenwijzer op
                                 <code class="hint_orange"><var>fraction(MINUTE, 5)</var> = <var>MINUTE/5</var></code> staan
