made responsive: footer, homepage, navbar, deleted 'fancy scrollbar' css

--- a/javascript/profile-package/badges_test.html
+++ b/javascript/profile-package/badges_test.html
@@ -5,8 +5,8 @@
 <head>
 <script src="../testbase.js"></script>
 <script src="badges.js"></script>
-<link rel="stylesheet" type="text/css" href="../../stylesheets/shared-package/default.css"></link>
-<link rel="stylesheet" type="text/css" href="../../stylesheets/profile-package/badges.css"></link>
+<link rel="stylesheet" type="text/css" href="../../stylesheets/shared-package/default.css" />
+<link rel="stylesheet" type="text/css" href="../../stylesheets/profile-package/badges.css" />
 <script>
 var badgeList = new Badges.BadgeList(),
     fullBadgeList = new Badges.UserBadgeList(),
