--- a/khan-exercises/exercises/number_properties_terminology_1.html
+++ b/khan-exercises/exercises/number_properties_terminology_1.html
@@ -21,7 +21,7 @@
         <div class="problems">
 
             <div id="associative">
-                <p class="question">Welke Eigenschap wordt er voorgesteld door de vergelijking <code>a+(b+c)=(a+b)+c</code></p>
+                <p class="question">Welke eigenschap wordt er voorgesteld door de vergelijking <code>a+(b+c)=(a+b)+c</code></p>
                 <p class="solution">Associatieve</p>
                 <ul class="choices" data-category="true">
                     <li data-each="PROPERTIES as place"><var>place</var></li>
