--- a/khan-exercises/exercises/order_of_operations.html
+++ b/khan-exercises/exercises/order_of_operations.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math">
 <head>
     <meta charset="UTF-8" />
-    <title>Order of operations</title>
+    <title>Volgorde van bewerken</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -19,7 +19,7 @@
 
         <div class="problems">
             <div id="order-of-operations">
-                <p data-tt="question1" class="question">Simplify the following expression.</p>
+                <p data-tt="question1" class="question">Vereenvoudig de volgende vergelijking.</p>
                 <p class="problem"><code>
                         <var>A</var> + (<var>B</var> \times <var>C</var>)
                 </code></p>
