--- a/khan-exercises/exercises/equation_of_a_circle_2.html
+++ b/khan-exercises/exercises/equation_of_a_circle_2.html
@@ -49,11 +49,11 @@
     </div>
 
     <div class="hints">
-        <p data-tt="hint1" >To find the equation in standard form, complete the square.</p>
+        <p data-tt="hint1" >Om de vergelijking in standaard vorm te vinden is het nodig het kwadraat uit te werken.</p>
         <p><code>(<var>expr(["+", "x^2", ["*", D, "x"]])</var>) + (<var>expr(["+", "y^2", ["*", E, "y"]])</var>) = <var>-F</var></code></p>
         <p><code>(<var>expr(["+", "x^2", ["*", D, "x"], H * H])</var>) + (<var>expr(["+", "y^2", ["*", E, "y"], K * K])</var>) = <var>-F</var> + <var>H * H</var> + <var>K * K</var></code></p>
         <p><code><var>X2T</var> + <var>Y2T</var> = <var>R * R</var> = <var>R</var>^2</code></p>
-        <p data-tt="hint1" >Thus, <code>(h, k) = (<var>H</var>, <var>K</var>)</code> and <code>r = <var>R</var></code>.</p>
+        <p data-tt="hint1" >Dus <code>(h, k) = (<var>H</var>, <var>K</var>)</code> en <code>r = <var>R</var></code>.</p>
     </div>
     </div>
 </body>
