--- a/khan-exercises/exercises/equation_of_a_hyperbola.html
+++ b/khan-exercises/exercises/equation_of_a_hyperbola.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format expressions">
 <head>
     <meta charset="UTF-8" />
-    <title>Equation of a hyperbola</title>
+    <title>Vergelijking van een hyperbool</title>
     <script src="../khan-exercise.js"></script>
     <style type="text/css">
         #answer_area .short input[type=text] {
@@ -36,36 +36,36 @@
     <div class="problems">
         <div>
             <div class="question">
-                <p data-tt="question1" >The equation of a hyperbola <code>H</code> is <code><var>WHICH_NEG == 1 ? expr(["-", Y2T, X2T]) : expr(["-", X2T, Y2T])</var> = 1</code>.</p>
-                <p data-tt="question2" >What are the asymptotes?</p>
+                <p data-tt="question1" >De vergelijking voor een hyperbool <code>H</code> is <code><var>WHICH_NEG == 1 ? expr(["-", Y2T, X2T]) : expr(["-", X2T, Y2T])</var> = 1</code>.</p>
+                <p data-tt="question2" >Wat zijn de asymptoten?</p>
             </div>
 
             <div class="solution" data-type="multiple">
                 <p><code>y = \pm </code> <span class="sol" data-type="line" ><var>ANSWER</var></span></p>
-                <div data-tt="example1" class="example">An equation of a line, like 3(x+1)/2+1</div>
+                <div data-tt="example1" class="example">Een vergelijking van een lijn, zoals 3(x+1)/2+1</div>
             </div>
         </div>
     </div>
 
     <div class="hints">
         <div>
-            <p data-tt="hint1" >We first rewrite the equation in terms of y.</p>
+            <p data-tt="hint1" >We willen de formule herschrijven in termen met y.</p>
             <p><code><var> Y2T</var> = <var>Y_MINUS</var> 1 <var>X_MINUS</var> <var>X2T</var></code></p>
         </div>
 
         <div>
-            <p data-tt="hint2" >Multiply both sides of the equation by <code><var>B * B</var></code>.</p>
+            <p data-tt="hint2" >Vermenigvuldig beide kanten met <code><var>B * B</var></code>.</p>
             <p><code><var> Y</var> = { <var>Y_MINUS</var> <var>B*B</var> <var>X_MINUS</var> \dfrac{ <var>X</var> \cdot <var> B*B </var> }{<var> A*A </var>}}</code> </p>
         </div>
         <div>
-            <p data-tt="hint3" >Take the square root.</p>
+            <p data-tt="hint3" >Werk het kwadraat weg.</p>
             <p><code><var> plus("y", -K) </var> = \pm \sqrt { <var>Y_MINUS</var> <var>B*B</var> <var>X_MINUS</var> \dfrac{ <var>X</var> \cdot <var> B*B </var> }{<var> A*A </var>}}</code></p>
         </div>
         <div>
-            <p data-tt="hint4" >As <code>x</code> approaches infinity, the constant matters less and less.</p>
+            <p data-tt="hint4" >Omdat <code>x</code> oneindigheid nadert, is de constante term minder en minden van invloed.</p>
             <p><code><var> plus("y", -K) </var> \approx \sqrt { \dfrac{ <var>X</var> \cdot <var> B*B </var> }{<var> A*A </var>}}</code></p> 
         </div>
-        <p data-tt="hint5" >Therefore, the asymptotes are <code>y \pm <var>ASYMPT</var></code></p>
+        <p data-tt="hint5" >Daarom zijn de asymptoten <code>y \pm <var>ASYMPT</var></code></p>
     </div>
     </div>
 </body>
