--- a/khan-exercises/exercises/perimeter_of_squares_and_rectangles.html
+++ b/khan-exercises/exercises/perimeter_of_squares_and_rectangles.html
@@ -118,7 +118,7 @@
                         <var>4 * S</var>\text{ <var>UNIT</var>}
                     </code></p>
                     <p>
-                        De zijden van een vierkant zijn allemaal even lang, dus elke zijde is <code><var>S</var></code>
+                        De zijden van een vierkant zijn allemaal even lang, dus elke zijde is
                         <var>(UNIT_TEXT, S)</var> lang.
                     </p>
                 </div>
