--- a/khan-exercises/exercises/representing_numbers.html
+++ b/khan-exercises/exercises/representing_numbers.html
@@ -109,7 +109,7 @@
                 }
             </div>
         </div>
-        <p>Het aantal blokjes zijn <code><var>N</var></code>.</p>
+        <p>Het aantal blokjes is <code><var>N</var></code>.</p>
     </div>
     </div>
 </body>
