--- a/khan-exercises/exercises/greatest_common_divisor.html
+++ b/khan-exercises/exercises/greatest_common_divisor.html
@@ -43,7 +43,7 @@
             </div>
             <div>
                 <p data-tt="hint6">De grootste gemene deler van <var>A</var> en <var>B</var> is <var>GCD</var>.</p>
-                <p data-tt="hint7"><code>\gcd(<var>A</var>, <var>B</var>) = <var>GCD</var></code></p>
+                <p data-tt="hint7"><code>\ggd(<var>A</var>, <var>B</var>) = <var>GCD</var></code></p>
             </div>
         </div>
     </div>
