--- a/khan-exercises/exercises/multiplication_1.html
+++ b/khan-exercises/exercises/multiplication_1.html
@@ -29,15 +29,15 @@
             <div data-if="B > 0" data-unwrap>
                 <div>
                     <div class="graphie" data-update="numbers" data-tt="exercise">
-                        label( [ 0, B - 1 ], "\\text{Draw " + plural( A, "circle" ) + ".}", "right" );
+                        label( [ 0, B - 1 ], "\\text{Teken " + plural( A, "cirkel" ) + ".}", "right" );
                         drawRow( A, B - 3, "#6495ED", 1 );
                     </div>
                 </div>
                 <div>
                     <div class="graphie" data-update="numbers" data-tt="hint1">
                         label( [ 0, B - 2 ], "\\text{"
-                            + "If there" + ( B === 1 ? " is " : " are " ) + plural( B, "row" )
-                            + " with " + plural( A, "circle" ) +  ( B === 1 ? " " : " each " ) + ", there is a total of how many circles?"
+                            + "Als er " + plural( B, "regel" ) + ( B === 1 ? " is " : " zijn " ) 
+                            + " met " + plural( A, "cirkel" ) +  ( B === 1 ? " " : " elk" ) + ", hoeveel cirkels zijn er dan in totaal?"
                             + "}", "right" );
                         for ( var i = 1; i &lt; B; i++ ) {
                             drawRow( A, B - 3 - i, "#28AE7B", A * i + 1 );
@@ -47,7 +47,7 @@
             </div>
             <div data-else>
                 <div class="graphie" data-update="numbers" data-tt="hint2">
-                    label( [ 0, B - 1 ], "\\large{\\text{Multiplying any number by 0 equals 0.}}", "right" );
+                    label( [ 0, B - 1 ], "\\large{\\text{Als je een nummer vermenigvuldigt met 0 is het antwoord altijd 0.}}", "right" );
                 </div>
             </div>
             <div class="graphie" data-update="numbers">
