Translation of key words in hints done

--- a/khan-exercises/exercises/properties_of_numbers_1.html
+++ b/khan-exercises/exercises/properties_of_numbers_1.html
@@ -10,7 +10,7 @@
     <div class="vars" data-tt="variable1">
         <var id="FIRST">randRange( 1, 10 )</var>
         <var id="SECOND">randRangeExclude( 1, 10, [ FIRST ] )</var>
-        <var id="OP, OP_WORD, ADDENDS">randFromArray( [ [ "+", "addition", "addends" ], [ "\\times", "multiplication", "factors" ] ] )</var>
+        <var id="OP, OP_WORD, ADDENDS">randFromArray( [ ["+","optellen", "cijfers" ], [ "\\times", "vermenigvuldigen","factoren" ] ] )</var>
         <var id="SYMBOL">binop( 1 )</var>
     </div>
 
