Fixed profile styling issues

--- a/javascript/shared-package/hover-card-test.html
+++ b/javascript/shared-package/hover-card-test.html
@@ -8,7 +8,7 @@
 <script src="handlebars-extras.js"></script>
 <script src="profile-model.js"></script>
 <script src="hover-card-view.js"></script>
-<link rel="stylesheet" type="text/css" href="../../stylesheets/shared-package/default.css"></link>
+<link rel="stylesheet" type="text/css" href="../../stylesheets/shared-package/default.css" />
 <script>
 var SAMPLE_PROFILE_DATA = {
     "avatarName": "green_leaf",
